--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-    <script src="browser.js"></script>
+    <head>
+
+        <meta charset="UTF-8">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <script src="browser.js"></script>
+
+        <title> Artificial Intelligence </title>
+    </head>
 
     <body>
 
-        <h1>Deep Learning with brain.js</h1>
+        <h1> Deep Learning with brain.js </h1>
 
         <div id="demo"></div>
 
