--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -7,7 +7,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <script src="browser.js"></script>
+        <script src="./browser.js"></script>
 
         <title> Artificial Intelligence </title>
     </head>
