--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -7,6 +7,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <meta name="color-scheme" content="dark">
+
         <script src="artificial_intelligence/browser.js"></script>
 
         <title> Artificial Intelligence </title>
@@ -21,7 +23,7 @@
                 margin: 0;
                 border: none;
                 box-sizing: border-box;
-                color: #fff;
+                color: #aaa;
                 outline: none;
                 user-select: none;
                 -webkit-user-drag: none;
@@ -75,7 +77,7 @@
                 // Black (0, 0, 0)
 
                 { input:[0, 0, 0], output:{dark:1}},
-            ]);
+            ], {log: false});
 
             // Convert HEX to RGB
 
