--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -23,7 +23,7 @@
                 margin: 0;
                 border: none;
                 box-sizing: border-box;
-                color: #aaa;
+                color: #bbb;
                 outline: none;
                 user-select: none;
                 -webkit-user-drag: none;
@@ -77,7 +77,8 @@
                 // Black (0, 0, 0)
 
                 { input:[0, 0, 0], output:{dark:1}},
-            ], {log: false});
+            ],
+            {log: true});
 
             // Convert HEX to RGB
 
