--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -68,11 +68,11 @@
 
                 // Lightgrey (192,192,192)
 
-                {input:[192/255, 192/255, 192/255], output:{lightgrey:1}},
+                {input:[192/255, 192/255, 192/255], output:{light:1}},
 
                 // Darkgrey (64, 64, 64)
 
-                { input:[65/255, 65/255, 65/255], output:{darkgrey:1}},
+                { input:[65/255, 65/255, 65/255], output:{dark:1}},
 
                 // Black (0, 0, 0)
 
@@ -106,6 +106,16 @@
             // Work with input
 
             let result = net.run([color[0] / 255, color[1] / 255, color[2] / 255]);
+
+            if (result["dark"] > result["light"]) {
+
+                const darker = result["dark"] / result["light"];
+            }
+
+            else if (result["light"] > result["dark"]) {
+
+                const lighter = result["light"] / result["dark"];
+            }
 
             // Display the probability of "dark" and "light"
 
