--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -105,16 +105,16 @@
 
             // Work with input
 
-            let result = net.run([color[0] / 255, color[1] / 255, color[2] / 255]);
+            result = net.run([color[0] / 255, color[1] / 255, color[2] / 255]);
 
             if (result["dark"] > result["light"]) {
 
-                const darker = result["dark"] / result["light"];
+                darker = result["dark"] / result["light"];
             }
 
             else if (result["light"] > result["dark"]) {
 
-                const lighter = result["light"] / result["dark"];
+                lighter = result["light"] / result["dark"];
             }
 
             // Display the probability of "dark" and "light"
