Contrast level added

--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -138,7 +138,9 @@
 
             // Display the probability of "dark" and "light"
 
-            demo.innerHTML += "Dark: " + result["dark"] + "<br>" + "Light: " + result["light"];
+            demo.innerHTML += "<p> Dark: " + result["dark"] + "<br>" + "Light: " + result["light"] + "</p>";
+
+            demo.innerHTML += "Contrast: " + contrast;
         </script>
     </body>
 </html>
