--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -105,7 +105,9 @@
                 return [r, g, b];
             }
 
-            input = '#' + "797979";
+            // input = '#' + "797979";
+
+            input = '#' + "bb9977";
 
             color = hex2rgb(input);
 
