Minor improvements, and testing

--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -117,9 +117,9 @@
                 return [r, g, b];
             }
 
-            // input = '#' + "797979";
+            input = '#' + "797979";
 
-            input = '#' + "bb9977";
+            // input = '#' + "bb9977";
 
             color = hex2rgb(input);
 
@@ -168,7 +168,7 @@
 
             demo.innerHTML += "Contrast: " + contrast;
 
-            demo.innerHTML += "<p> Red: " + result["red"] + "<br>" + "Green: " + result["green"] + "Blue: " + result["blue"] + "</p>";
+            demo.innerHTML += "<p> Red: " + result["red"] + "<br>" + "Green: " + result["green"] + "<br>" + "Blue: " + result["blue"] + "</p>";
         </script>
     </body>
 </html>
