--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -129,9 +129,9 @@
 
             // Se declara una variable para guardar el color que se analizará
 
-            input = '#' + "797979";
+            // input = '#' + "797979";
 
-            // input = '#' + "bb9977";
+            input = '#' + "bb9977";
 
             // Se convierte el valor ingresado
 
