--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -15,7 +15,7 @@
 
         <style>
 
-            * {
+            *{
                 font-family: "Segoe UI", "Roboto", arial, sans-serif;
                 font-size: 14px;
                 line-height: 1.25;
@@ -29,18 +29,22 @@
                 -webkit-user-drag: none;
             }
 
-            html {
+            html{
                 height: 100%;
                 overflow: hidden;
                 background: #333;
             }
 
-            h1 {
-                font-size: 2em;
-                margin-bottom: 5px;
+            body{
+                text-align: center;
             }
 
-            p {
+            h1{
+                font-size: 2em;
+                margin-bottom: 20px;
+            }
+
+            p{
                 margin-bottom: 5px;
             }
         </style>
@@ -54,13 +58,35 @@
 
         <script>
 
+            // Se construye una red neuronal para detectar el brillo
+
+            const brightnessNN = new brain.NeuralNetwork();
+
             // Se construye una red neuronal para detectar colores
 
             const colorNN = new brain.NeuralNetwork();
 
-            // Se construye una red neuronal para detectar el brillo
+            // Se entrena la red con algunos objetos de entrada
 
-            const brightnessNN = new brain.NeuralNetwork();
+            brightnessNN.train( [
+
+                // Blanco RGB(255, 255, 255)
+
+                { input:[255/255, 255/255, 255/255], output:{light:1} },
+
+                // Gris claro (192,192,192)
+
+                { input:[192/255, 192/255, 192/255], output:{light:1} },
+
+                // Gris oscuro (64, 64, 64)
+
+                { input:[65/255, 65/255, 65/255], output:{dark:1} },
+
+                // Negro (0, 0, 0)
+
+                { input:[0, 0, 0], output:{dark:1} }
+            ],
+            {log: true} );
 
             // Se entrena la red con algunos objetos de entrada
 
@@ -92,28 +118,6 @@
             ],
             {log: true} );
 
-            // Se entrena la red con algunos objetos de entrada
-
-            brightnessNN.train( [
-
-                // Blanco RGB(255, 255, 255)
-
-                { input:[255/255, 255/255, 255/255], output:{light:1} },
-
-                // Gris claro (192,192,192)
-
-                { input:[192/255, 192/255, 192/255], output:{light:1} },
-
-                // Gris oscuro (64, 64, 64)
-
-                { input:[65/255, 65/255, 65/255], output:{dark:1} },
-
-                // Negro (0, 0, 0)
-
-                { input:[0, 0, 0], output:{dark:1} }
-            ],
-            {log: true} );
-
             // Se declara una función para convertir el formato de color hexadecimal en RGB
 
             const hexToRGB = (hex) => {
@@ -141,11 +145,9 @@
 
             const demo = document.getElementById("demo");
 
-            // Se muestra el color que se analizará
+            // Se muestran los formatos del color que se analizará
 
-            demo.innerHTML += "<p> HEX: " + input + "</p>";
-
-            demo.innerHTML += "<p> RGB: " + color[0] + ", " + color[1] + ", " + color[2] + "</p>";
+            demo.innerHTML += "<p> HEX: " + input + "<br> <p>" + color[0] + ", " + color[1] + ", " + color[2] + "</p> </p>";
 
             // Se entrega el color a la IA de brillo para saber si hay diferencia de colores base
 
