--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -147,7 +147,7 @@
 
             // Se muestran los formatos del color que se analizará
 
-            demo.innerHTML += "<p> HEX: " + input + "<br>" + color[0] + ", " + color[1] + ", " + color[2] + "</p>";
+            demo.innerHTML += "<p> HEX: " + input + "<br> RGB: " + color[0] + ", " + color[1] + ", " + color[2] + "</p>";
 
             // Se entrega el color a la IA de brillo para saber si hay diferencia de colores base
 
