--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -220,7 +220,7 @@
 
                     // Y se muestran
 
-                    demo.innerHTML += "<p> Red: " + redResult + "<br>" + "Green: " + greenResult + "<br>" + "Blue: " + blueResult + "</p>";
+                    demo.innerHTML += "<p> Rojo: " + redResult + "<br>" + "Verde: " + greenResult + "<br>" + "Azul: " + blueResult + "</p>";
 
                 break;
             }
