--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -135,7 +135,7 @@
 
             // input = '#' + "797979";
 
-            input = '#' + "bb9977";
+            input = '#' + "556677";
 
             // Se convierte el valor ingresado
 
