--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -200,7 +200,7 @@
 
             // Se analiza la variable colorResult...
 
-            switch (colorResult.length() > 0) {
+            switch (colorResult.length > 0) {
 
                 // ... En caso de que no exista...
 
