--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -135,7 +135,7 @@
 
             // input = '#' + "797979";
 
-            input = '#' + "677787";
+            input = '#' + "70707f";
 
             // Se convierte el valor ingresado
 
