--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -183,38 +183,18 @@
 
                 // Si la oscuridad es mayor a 0.90 y la claridad también...
 
-                darker > 0.90 && lighter > 0.90 ?
+                if (darker > 0.90 && lighter > 0.90) {
 
                     // ... Entonces, el brillo (y, por lo tanto, el color) es gris
 
                     colorName = "grey"
-                :
+                } else {
 
                     // Si no, se entrega el color a la IA de colores y se conserva el resultado
 
                     colorResult = colorNN.run([color[0] / 255, color[1] / 255, color[2] / 255])
-                ;
-            }
 
-            demo.innerHTML += "<p> Oscuridad: " + brightnessResult["dark"] + "<br>" + "Claridad: " + brightnessResult["light"] + "</p>";
-
-            // Se analiza la variable colorResult...
-
-            switch (Object.keys(colorResult).length > 0) {
-
-                // ... En caso de que no exista...
-
-                case false:
-
-                    // No se hace algo
-
-                break;
-
-                // ... Por defecto...
-
-                default:
-
-                    // ... Se conservan los resultados
+                    // Se conservan los resultados
 
                     redResult = colorResult["red"];
 
@@ -225,9 +205,10 @@
                     // Y se muestran
 
                     demo.innerHTML += "<p> Rojo: " + redResult + "<br>" + "Verde: " + greenResult + "<br>" + "Azul: " + blueResult + "</p>";
-
-                break;
+                }
             }
+
+            demo.innerHTML += "<p> Oscuridad: " + brightnessResult["dark"] + "<br>" + "Claridad: " + brightnessResult["light"] + "</p>";
 
             // demo.innerHTML += "Nombre del color: " + colorName;
         </script>
