--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -133,7 +133,7 @@
 
             // input = '#' + "797979";
 
-            input = '#' + "667788";
+            input = '#' + "8797a7";
 
             // Se convierte el valor ingresado
 
