--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -131,9 +131,7 @@
 
             // Se declara una variable para guardar el color que se analizará
 
-            // input = '#' + "797979";
-
-            input = '#' + "8797a7";
+            input = '#' + "a7a7a7";
 
             // Se convierte el valor ingresado
 
