--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -131,7 +131,7 @@
 
             // Se declara una variable para guardar el color que se analizará
 
-            input = '#' + "a7a7a7";
+            input = '#' + "272727";
 
             // Se convierte el valor ingresado
 
