--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -131,7 +131,7 @@
 
             // Se declara una variable para guardar el color que se analizará
 
-            input = '#' + "8999a9";
+            input = '#' + "aaaaaa";
 
             // Se convierte el valor ingresado
 
