--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -131,7 +131,7 @@
 
             // Se declara una variable para guardar el color que se analizará
 
-            input = '#' + "aaaaaa";
+            input = '#' + "bbbbbb";
 
             // Se convierte el valor ingresado
 
@@ -195,7 +195,7 @@
 
                     // ... Entonces, el brillo (y, por lo tanto, el color) es gris
 
-                    colorName = "grey"
+                    colorName = "Grey"
                 } else {
 
                     // ... Si no, se categoriza el color con los valores
